--- a/SQLonOpenShift/sqlonopenshift/01_deploy/storage.yaml
+++ b/SQLonOpenShift/sqlonopenshift/01_deploy/storage.yaml
@@ -1,18 +1,9 @@
-kind: StorageClass
-apiVersion: storage.k8s.io/v1beta1
-metadata:
-     name: azure-disk
-provisioner: kubernetes.io/azure-disk
-parameters:
-  storageaccounttype: Premium_LRS
-  kind: Managed
----
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: mssql-data
   annotations:
-    volume.beta.kubernetes.io/storage-class: azure-disk
+    volume.beta.kubernetes.io/storage-class: azure-standard
 spec:
   accessModes:
   - ReadWriteOnce
