--- a/.azuredatastudio/settings.json
+++ b/.azuredatastudio/settings.json
@@ -3,5 +3,6 @@
         "activityBar.background": "#05351D",
         "titleBar.activeBackground": "#074A29",
         "titleBar.activeForeground": "#EFFEF6"
-    }
+    },
+    "python.linting.pylintEnabled": true
 }
