--- a/SQLonOpenShift/sqlonopenshift/05_operator/operator.yaml
+++ b/SQLonOpenShift/sqlonopenshift/05_operator/operator.yaml
@@ -63,7 +63,7 @@ spec:
         - name: MSSQL_K8S_NAMESPACE
           valueFrom:
             fieldRef: {fieldPath: metadata.namespace}
-        image: tigervin/ospvin
+        image: mcr.microsoft.com/mssql/ha:2019-CTP2.1-ubuntu
         name: mssql-operator
       serviceAccount: mssql-operator
       imagePullSecrets:
