--- a/sql2019workshop/sql2019wks/07_SQLOnKubernetes/deploy/powershell/sql2019deployment.yaml
+++ b/sql2019workshop/sql2019wks/07_SQLOnKubernetes/deploy/powershell/sql2019deployment.yaml
@@ -17,7 +17,9 @@ spec:
       terminationGracePeriodSeconds: 10
       containers:
       - name: mssql
-        image: mcr.microsoft.com/mssql/rhel/server:2019-RC1
+        image: mcr.microsoft.com/mssql/rhel/server:2019-latest
+        securityContext:
+          runAsUser: 0
         env:
         - name: MSSQL_PID
           value: "Developer"
