--- a/sql2019workshop/sql2019wks/07_SQLOnKubernetes/deploy/powershell/sql2019deployment.yaml
+++ b/sql2019workshop/sql2019wks/07_SQLOnKubernetes/deploy/powershell/sql2019deployment.yaml
@@ -15,11 +15,11 @@ spec:
         app: mssql
     spec:
       terminationGracePeriodSeconds: 10
+      securityContext:
+        fsGroup: 1000
       containers:
       - name: mssql
         image: mcr.microsoft.com/mssql/rhel/server:2019-latest
-        securityContext:
-          runAsUser: 0
         env:
         - name: MSSQL_PID
           value: "Developer"
